--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
